Updated Getting Started with Gradle (markdown)